# vacancies_parser

./: README.md  connector_class.py  engine_classes.py  main.py  pyproject.toml  vacancy_classes.py
