[tool.poetry]
name = "vacancies-parser"
version = "0.1.0"
description = ""
authors = ["marie-george <maria85night@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancies_parser"}]

[tool.poetry.dependencies]
python = "3.11.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
